--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "chai"
   ],
   "author": "Janhavi",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^3.3.3"
+  }
 }
